# unnamed-drug-dealer-roguelite-deckbuilder

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  fix_cards.py  fix_cards.sh  rustc-ice-2026-07-12T06_01_03-36004.txt
assets/: buyers.ron
assets/cards/: cover.ron  evidence.ron  insurance.ron  locations.ron  modifiers.ron  products.ron
docs/: README.md
docs/00-spec/: README.md  bust-insurance-mechanics-feature-matrix.md  bust-insurance-mechanics.md  card-system-feature-matrix.md  card-system.md  core-gameplay-loop-feature-matrix.md  core-gameplay-loop.md  heat-system-feature-matrix.md  heat-system.md  heat-trust-systems-feature-matrix.md  heat-trust-systems.md  narrative-system-feature-matrix.md  narrative-system.md  product-roadmap.md  progression-meta-feature-matrix.md  progression-meta.md
docs/01-rfc/: 001-mvp-core-prototype.md  001-revised-minimal-playable-hand.md  002-betting-system-and-ai.md  003-insurance-and-complete-cards.md  004-card-retention-between-hands.md  005-deck-balance-and-card-distribution.md  006-deck-building.md  007-meaningful-betting-decisions.md  008-sequential-play-with-dealer-reveals.md  009-buyer-system.md  010-buyer-scenarios-and-product-expansion.md  011-ui-refactor.md  012-narrative-generation-system.md  013-asset-externalization.md  014-dynamic-narrative-construction.md  015-heat-and-character-persistence.md  016-account-cash-system.md  017-player-card-upgrades.md  018-narc-difficulty-scaling.md  019-upgrade-stat-choice.md  020-location-card-shops.md  023-kingpin-and-dealers.md  (+5 more)
src/: game_state.rs  main.rs
(+110 files in other folders)
