[package]
name = "drug-dealer-deckbuilder"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0"
serde = { version = "1", features = ["derive"] }
ron = "0"
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
